# clide

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Makefile  POLICY.md  README.md  TODO.md  analysis_options.yaml  clide.spec  pql-plan.json  project.yaml  pubspec.yaml  pyproject.toml
.claude/: settings.json
.clide/: settings.yaml
.gitea/workflows/: release.yml  test.yml
.githooks/: pre-push
.pql/: pql-plan.json
.pql/hooks/: post-merge
app/: README.md  pubspec.yaml
app/assets/: licenses.yaml
app/integration_test/: app_starts_test.dart  extension_lifecycle_test.dart  theme_picker_test.dart
app/lib/: app.dart  main.dart
app/linux/: CMakeLists.txt
app/web/: index.html  manifest.json
assets/: clide.tmux.conf  licenses.yaml
assets/grammars/: diff.wasm  elixir.wasm  erlang.wasm  gdscript.wasm  git-config.wasm  gitignore.wasm  julia.wasm  just.wasm  make.wasm  nix.wasm  proto.wasm  python.wasm  ruby.wasm  swift.wasm  wgsl.wasm  xml.wasm
assets/queries/: hlsl.scm  swift.scm
ci/: lint.sh  release.sh  security.sh  smoke_bundle.sh  test.sh  test_a11y.sh  test_core.sh  test_coverage.sh  test_e2e.sh  test_integration.sh
clide/: __init__.py  app.py  cli.py
clide-web/clide_web/: __init__.py  config.py  pty_bridge.py  server.py  sessions.py
clide/controllers/: editor.py  git.py  todos.py
clide/extensions/: hookspecs.py  manager.py
clide/models/: __init__.py  git.py  problems.py  theme.py  todos.py  workspace.py
clide/services/: __init__.py  claude_events.py  file_service.py  file_watcher.py  process_service.py  settings_service.py  syntax_service.py  update_service.py
clide/themes/: __init__.py  loader.py  registry.py
decisions/: README.md  accessibility.md  architecture.md  extensions.md  process.md  questions-accessibility.md  questions-architecture.md  questions-extensions.md  questions-process.md  questions-testing.md  questions.md  rejected.md  testing.md  tooling.md
deploy/: clide-launcher  clide-web.service  install-clide-web.sh  update-ttyd.sh
deploy/zellij/: bare.kdl  config.kdl
docs/: ARCHITECTURE.md  code-organization.md  initial-plan.md  macos-pty-problem.md  pty-proposition.md  tui-ide-spec.md  web-deployment.md
docs/ADRs/: 0001-cli-first-not-mcp.md  0002-sidecar-language-go.md  0003-pql-as-supporter-tool.md  0004-ignore-file-strategy.md  0005-dart-core-ptyc-peer.md  0006-cli-and-event-surface.md
docs/audits/: pty-ipc-error-handling-2026-05-05.md
docs/claude-design/: Clide Design System.html  Clide Hi-Fi.html  README.md  Wireframe - Flows.html  Wireframe.html  interaction-model-claudepanels.md
docs/design/: multitab-pane.md
docs/diagrams/: multitab-pane.d2
docs/testing/: README.md  a11y-manual.md  claude-ui-workflow.md
docs/wireframes/: README.md
integration_test/: app_starts_test.dart  extension_lifecycle_test.dart  theme_picker_test.dart
legacy/: .pre-commit-config.yaml  CLAUDE.md  Makefile  TODO.md
legacy/clide/: __main__.py  app.py  cli.py
legacy/clide-web/: Makefile  pyproject.toml
legacy/clide-web/clide_web/: __main__.py  setup_wizard.py
legacy/clide-web/clide_web/data/: clide_web.db
legacy/clide-web/clide_web/static/: index.html
legacy/deploy/: clide-web.service  install-clide-web.sh
legacy/docs/: ARCHITECTURE.md  user-manual.md  web-deployment.md
legacy/packaging/: clide.desktop
legacy/scripts/: build-linux.sh
lib/: app.dart  clide.dart  main.dart  test_app.dart
lib/extension/: extension.dart
lib/kernel/: kernel.dart
lib/widgets/: widgets.dart
linux/: CMakeLists.txt  clide.desktop
linux/runner/: CMakeLists.txt  clide_app.cc  clide_app.h  main.cc  my_application.cc
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  DebugProfile.entitlements.template
macos/Runner.xcodeproj/: project.pbxproj
native/linux-x64/: ptyc
packaging/: entitlements.plist
ptyc/: Makefile  README.md  ptyc.c  test_ptyc.sh
scripts/: bazzite-flutter-setup.sh  build-macos.sh  build-windows.ps1
sidecar/: go.mod
src/clide/: app.py  cli.py
test/a11y/: contrast_test.dart  i18n_coverage_test.dart  keyboard_traversal_test.dart  semantic_coverage_test.dart
test/cli/: shortcuts_test.dart
test/daemon/: editor_commands_test.dart  files_commands_test.dart  git_commands_test.dart  in_process_test.dart  pane_commands_test.dart  pql_commands_test.dart  subprocess_test.dart
test/editor/: registry_test.dart
test/files/: ignore_test.dart  path_safety_test.dart
test/git/: diff_test.dart  operations_test.dart  status_test.dart
test/goldens/: clide_button_goldens_test.dart  clide_icon_goldens_test.dart  clide_tab_bar_goldens_test.dart
test/helpers/: fake_ipc.dart  kernel_fixture.dart  widget_harness.dart
test/ipc/: envelope_test.dart  errno_mapping_test.dart  paths_test.dart  schema_v1_test.dart
test/panes/: registry_test.dart
test/pty/: session_test.dart
test/widgets/: clide_pane_chrome_test.dart  multitab_controller_test.dart  multitab_pane_test.dart
tests/: __init__.py  conftest.py
tests/harnesses/: app_harness.py  controller_harness.py
tests/integration/: __init__.py  test_files_view.py
tests/snapshots/: __init__.py  test_app_snapshots.py
web/: index.html  manifest.json
(+675 files in other folders)
